# axolotl-finetuning

./: README.md  docker-compose.yaml  pyproject.toml
data_conversion/: convert.py
training/: qlora-mistral.yaml  qlora-openllama3b.yaml  qlora-qwen0B.yaml
